Bug 1020407 - CSP in C++: Log more descriptive console message if parsing fails (r=sstamm)